# pystages

./: .gitignore  .readthedocs.yaml  .readthedocs.yml  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: black.yml  linting.yml  python-publish.yml
doc/: api.rst  api_corvus.rst  api_smc100.rst  api_tic.rst  conf.py  index.rst
docs/: api.rst  api_cnc.rst  api_m3fs.rst  api_pi.rst  autofocus.rst  conf.py  gui.md  index.rst  requirements.txt  troubleshooting.rst  vectors.rst
pystages/: __init__.py  autofocus.py  cncrouter.py  corvus.py  exceptions.py  grbl.py  m3fs.py  pi.py  pi_errors.py  smc100.py  stage.py  tic.py  vector.py
pystages/gui/: __main__.py  gui.py
tests/: conftest.py  test_autofocus.py  test_corvus.py  test_pi.py  test_vector.py
