[project]
name = "pystages"
description = "Motorized stage control library for scientific applications"
readme = "README.md"
authors = [
  { name = "Olivier Hériveaux", email = "olivier.heriveaux@ledger.fr" },
  { name = "Michaël Mouchous", email = "michael.mouchous@ledger.fr" },
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
  "Operating System :: OS Independent",
]
requires-python = ">=3.9"
dependencies = ["pyserial", "pyusb", "numpy", "pyqt6"]
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/Ledger-Donjon/pystages"
"Bug Tracker" = "https://github.com/Ledger-Donjon/pystages/issues"
"Documentation" = "https://pystages.readthedocs.io/en/latest"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"
bump = true

[tool.poetry]
version = "0.0.0"

[project.scripts]
pystages = 'pystages.gui.__main__:main'
